[package]
name = "cities"
version = "0.2.0"
authors = ["Josh Baker <joshbaker77@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tidwall/cities-rs"
documentation = "https://docs.rs/cities/"
description = "10,000 Cities with Latitude, Longitude, and Elevation in Rust"

[dependencies]
